fixes misaligned blocks

--- a/showcase.view.css
+++ b/showcase.view.css
@@ -27,13 +27,24 @@
 	flex: none;
 }
 
+[hyoo_showcase_app_container] {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    height: 13rem;
+    max-height: 100%;
+}
+
 [hyoo_showcase_app_demo] {
 	pointer-events: none;
 	box-shadow: 0 0 0 2px var(--mol_theme_line);
 	width: 200%;
-	height: 26rem;
-	transform: translate( -25% , -25% ) scale( .5 );
-	background-size: cover;
+    max-width: 200%;
+    max-height: 200%;
+    transform: scale( .5 );
+    transform-origin: 0 0;
+    background-size: cover;
+    position: absolute;
 }
 
 [hyoo_showcase_offer_link] {
